# eiv-docker-template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
app/: main.py
test/: test_health.py
