[project]
name = "python-fastapi-dev"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
